--- a/web/index.html
+++ b/web/index.html
@@ -17,5 +17,6 @@
 <script src="assets/angularjs/ui-bootstrap-tpls-0.12.1.min.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
 <script type="text/javascript" src="app/controllers/homeCtrl.js"></script>
+<script type="text/javascript" src="app/controllers/editorCtrl.js"></script>
 </body>
 </html>
