--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/toastr/toastr.min.css" rel="stylesheet">
     <title></title>
 </head>
 <body>
@@ -16,6 +17,7 @@
 <script src="assets/angularjs/angular.min.js"></script>
 <script src="assets/angularjs/angularjs-ui-router.js"></script>
 <script src="assets/angularjs/ui-bootstrap-tpls-0.12.1.min.js"></script>
+<script src="assets/toastr/toastr.min.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
 <script type="text/javascript" src="app/controllers/editorCtrl.js"></script>
 </body>
